api/crates/postgres/tests/integration/media/snapshots/integration__media__fetch_all____test_context_wrapped_until_desc_succeeds.snap
---
source: crates/postgres/tests/integration/media/fetch_all.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "id",
  "created_at",
  "updated_at"
FROM
  "media"
WHERE
  ("created_at", "id") > ($1, $2)
ORDER BY
  "created_at" ASC,
  "id" ASC
LIMIT
  $3'''
rows_affected = 3
rows_returned = 3
